--- a/homework_06/static/css/style.css
+++ b/homework_06/static/css/style.css
@@ -10,3 +10,9 @@ h1 {
     text-align: center;
     padding: 10px;
 }
+.h1add{
+    border: 2px #eee solid;
+    color: yellow;
+    text-align: center;
+    padding: 10px;
+}
