--- a/homework_06/templates/viewpage.html
+++ b/homework_06/templates/viewpage.html
@@ -2,6 +2,12 @@
 
 {% block content %}
     <h1 class="h1add">{% block title %} Welcome to VIEWPAGE. {% endblock %}</h1>
+    <h2>Все записи из Базы данных</h2>
 
+{% for el in users %}
+<div class="alert alert-info">
+    <h3>id:{{ el.id }}  имя:{{ el.username }}  email:{{ el.email }}</h3>
 </div>
+
+{% endfor %}
 {% endblock %}
