--- a/homework_07/sales_shop/shop/templates/shop/index.html
+++ b/homework_07/sales_shop/shop/templates/shop/index.html
@@ -12,6 +12,7 @@
             {% for product in products %}
                 <li>
                     <code>${{ product.price }}</code>
+                    [{{ product.category.name }}]
                     -
                     {{ product.name }}
 
