--- a/homework_08/sales_shop/shop/templates/shop/product_form.html
+++ b/homework_08/sales_shop/shop/templates/shop/product_form.html
@@ -4,7 +4,7 @@
 Super Shop
 {% endblock %}
 
-{% block body %}
+{% block main %}
     <div>
         <h1>Super Shop</h1>
         <h3>Products CREATE</h3>
